test/typechecker.d/valid/match2.surc
match2(dox: Integer): Integer = match dox: Integer
	3 -> 3
	n -> 4
