test/typechecker.d/invalid/match2.surc
match2(dox: Integer): Integer = match dox
	'a' -> 3
	3 -> 4
	n -> 4
